#134 fix for screen width sliding issue (added "overflow-x:hidden;" to CSS for body element)

--- a/app/assets/stylesheets/bul.css.scss
+++ b/app/assets/stylesheets/bul.css.scss
@@ -8,6 +8,7 @@
 body {
 	font-family: 'Source Sans Pro', 'Helvetica', 'Arial', sans-serif;
 	font-size: 150%;
+	overflow-x:hidden;
 }
 
 
